# rs-qa

./: Dockerfile  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: _base.yml  _deploy.yml  main.yml  update-service.sh
src/: app.py  bedrock_service.py  logs.py  models.py  validation_handlers.py
src/utils/: elapsed_time.py
tests/: test_app.py  test_bedrock_service.py
